[project]
name = "pennyio"
version = "0.2.0"
description = "Common image functions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.12.0.88",
    "rawpy>=0.25.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pennyio"]
package-dir = {"" = "src"}

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
honor_noqa = true
color_output = true

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=6.1.0",
]
